# npm3d-challenge

./: .gitignore  README.md  benchmark.py  clean_benchmark.py  config.py  features_computation.py  fullKclassifier.pickle  hyperparam_best.json  loader.py  main.py  paramsearch.py  pipeline.py  preprocess.py  requirements.txt  setup.py  subsampler.py  train_nn_stdfeat.py
gco/: CMakeLists.txt  main.cpp
models/: benchmark.py  deep_stdfeatures.py
utils/: active_learning.py  features_computation.py  graph.py  loader.py  subsampler.py  viz.py
utils/features/: pca.pyx
